--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^5.19.6"
+    "sequelize": "^6.6.2"
   },
   "devDependencies": {
     "nodemon": "^1.19.4",
